# daily-wallpapers-rust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
config/: config.json
scripts/: build.bat  build.sh
scripts/linux/: cron_adder.sh  cron_remover.sh  install.sh
scripts/windows/: build_wallpaper_changer.bat  build_wallpaper_changer.sh  install.bat
src/: clap_models.rs  core.rs  core_functions.rs  core_models.rs  dw_commands_operations.rs  dw_core.rs  dw_core_functions.rs  dw_models.rs  main.rs  models.rs  operations.rs
src/scripts/windows/: WallpaperChanger.cs
src/windows/: WallpaperChanger.cs  WindowsWallpaperChanger.cs
tests/: context_text.py
