[package]
name = "daily-wallpapers-rust"
version = "0.0.0"
edition = "2021"
author = "Gustavo Mantovani"
description = "A simple and universal implementation to automate changing wallpapers on UNIX systems"
repository = "https://github.com/GustaMantovani/daily-wallpapers-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }